// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GH #5739 1`] = `
"set names 'utf8';
set session_replication_role = 'replica';

create table "foo" ("id" varchar(255) not null, "embedding1" vector(1024) null, "embedding2" vector(1024) null, "embedding3" vector(1024) null, constraint "foo_pkey" primary key ("id"));

set session_replication_role = 'origin';
"
`;

exports[`GH #5739 2`] = `
{
  "down": "set names 'utf8';
set session_replication_role = 'replica';

drop table if exists "foo" cascade;

set session_replication_role = 'origin';
",
  "up": "set names 'utf8';
set session_replication_role = 'replica';

create table "foo" ("id" varchar(255) not null, "embedding1" vector(1024) null, "embedding2" vector(1024) null, "embedding3" vector(1024) null, constraint "foo_pkey" primary key ("id"));

set session_replication_role = 'origin';
",
}
`;
